kubernetes/portal/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: homepage
  namespace: portal

spec:
  selector:
    app: homepage

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
