kubernetes/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: homepage
  namespace: portal

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - portal.gruppe4.local
      secretName: portal-pulseai-tls

  rules:
    - host: portal.gruppe4.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: homepage

                port:
                  number: 80
